@@ -1,5 +1,8 @@
 2014-01-06  Carl Hetherington  <cth@carlh.net>
 
+	* Give a warning on make DCP if it seems unlikely that the disk
+	will have enough space to store the finished DCP (#92).
+
 	* Make sure forced languages override the environment for gettext()
 	as well as wxWidgets' i18n code (#108).
 
